--- a/src/components/Selector/Selector.scss
+++ b/src/components/Selector/Selector.scss
@@ -6,6 +6,8 @@
   justify-content: space-between;
   color: var(--dark);
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &.hide-label {
     label {
